--- a/.github/workflow/Docker.yml
+++ b/.github/workflow/Docker.yml
@@ -7,20 +7,20 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: setup Docker Build
-    uses: docker/setup-buildx-action@v2.0.0
+      uses: docker/setup-buildx-action@v2.0.0
     - name: Download a Build Artifact
-    uses: actions/download-artifact@v3.0.0
-    with:
-      name: programa
+      uses: actions/download-artifact@v3.0.0
+      with:
+        name: programa
     - name: Docker Login
-    uses: docker/login-action@v2.0.0
-    with:
-      username: thaysesf
-      password: {{secret.docker_hub}}
+      uses: docker/login-action@v2.0.0
+      with:
+        username: thaysesf
+        password: ${{ secrets.docker_hub }}
     - name: Build and push Docker images
-    uses: docker/build-push-action@v3.0.0
-    with:
-      context: .
-      file: ./Dockerfile
-      push: true
-      tags: thaysesf/go_ci:${{github.ref_name}}
+      uses: docker/build-push-action@v3.0.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: thaysesf/go_ci:${{github.ref_name}}
