--- a/.github/workflow/EKS.yml
+++ b/.github/workflow/EKS.yml
@@ -33,3 +33,4 @@ jobs:
     - run: aws sts get-caller-identity 
 
     - run: aws eks update-kubeconfig --region us-east-2 --name homolog2
+    - run: kubectl apply -f deployment.yaml
