--- a/.github/workflows/EKS.yml
+++ b/.github/workflows/EKS.yml
@@ -12,8 +12,8 @@ jobs:
     - name: configurando credenciais da AWS
       uses: aws-actions/configure-aws-credentials@v1
       with:
-      aws-access-key-id: {{secrets.ID_CHAVE_ACESSO}}
-      aws-secret-access-key: {{secrets.CHAVE_SECRETA}}
+      aws-access-key-id: ${{secrets.ID_CHAVE_ACESSO}}
+      aws-secret-access-key: ${{secrets.CHAVE_SECRETA}}
       aws-region: us-east-2
 
     - uses: actions/checkout@v3
