--- a/.github/workflows/EKS.yml
+++ b/.github/workflows/EKS.yml
@@ -15,17 +15,18 @@ jobs:
        aws-access-key-id: ${{secrets.ID_CHAVE_ACESSO}}
        aws-secret-access-key: ${{secrets.CHAVE_SECRETA}}
        aws-region: us-east-2
-
+        
     - uses: actions/checkout@v3
       with:
         repository: thaysesf/Infra_CI_Kubernetes
+        path: terraform
 
     - name: HashiCorp - Setup Terraform
       uses: hashicorp/setup-terraform@v2.0.3
 
-    - run: terraform -chdir=Infra_CI_Kubernetes/env/Homolog init
+    - run: terraform -chdir=terraform/Infra_CI_Kubernetes/env/Homolog init
 
-    - run: terraform -chdir=Infra_CI_Kubernetes/env/Homolog apply -auto-approve
+    - run: terraform -chdir=terraform/Infra_CI_Kubernetes/env/Homolog apply -auto-approve
 
     - name: Kubectl tool installer
       uses: Azure/setup-kubectl@v3
