--- a/.github/workflows/EKS.yml
+++ b/.github/workflows/EKS.yml
@@ -23,6 +23,8 @@ jobs:
 
     - name: HashiCorp - Setup Terraform
       uses: hashicorp/setup-terraform@v2.0.3
+      
+    - run: ls
 
     - run: terraform -chdir=terraform/Infra_CI_Kubernetes/env/Homolog init
 
