--- a/.github/workflows/EKS.yml
+++ b/.github/workflows/EKS.yml
@@ -26,9 +26,9 @@ jobs:
       
     - run: ls
 
-    - run: terraform -chdir=Infra_CI_Kubernetes/env/Homolog init
+    - run: terraform -chdir=env/Homolog init
 
-    - run: terraform -chdir=Infra_CI_Kubernetes/env/Homolog apply -auto-approve
+    - run: terraform -chdir=env/Homolog apply -auto-approve
 
     - name: Kubectl tool installer
       uses: Azure/setup-kubectl@v3
