--- a/.github/workflows/EKS.yml
+++ b/.github/workflows/EKS.yml
@@ -36,4 +36,7 @@ jobs:
     - run: aws sts get-caller-identity 
 
     - run: aws eks update-kubeconfig --region us-east-2 --name homolog2
+    
+    - run: ls
+    
     - run: kubectl apply -f deployment.yaml
