--- a/.github/workflows/EKS.yml
+++ b/.github/workflows/EKS.yml
@@ -20,15 +20,16 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: thaysesf/Infra_CI_Kubernetes
+        path: terraform
 
     - name: HashiCorp - Setup Terraform
       uses: hashicorp/setup-terraform@v2.0.3
       
     - run: ls
 
-    - run: terraform -chdir=env/Homolog init
+    - run: terraform -chdir=terraform/env/Homolog init
 
-    - run: terraform -chdir=env/Homolog apply -auto-approve
+    - run: terraform -chdir=terraform/env/Homolog apply -auto-approve
 
     - name: Kubectl tool installer
       uses: Azure/setup-kubectl@v3
