--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
+    name: thayse-go
     app: thayse-go
     app.kubernetes.io/instance: thayse-go
     app.kubernetes.io/name: thayse-go
