--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,8 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: thayse-go
+  namespace: thayse-go
   labels:
-    name: thayse-go
     app: thayse-go
     app.kubernetes.io/instance: thayse-go
     app.kubernetes.io/name: thayse-go
@@ -12,7 +13,6 @@ spec:
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      name: thayse-go
       app: thayse-go
       app.kubernetes.io/instance: thayse-go
       app.kubernetes.io/name: thayse-go
@@ -20,7 +20,6 @@ spec:
   template:
     metadata:
       labels:
-        name: thayse
         app: thayse-go
         app.kubernetes.io/instance: thayse-go
         app.kubernetes.io/name: thayse-go
