--- a/deployment.yaml
+++ b/deployment.yaml
@@ -32,6 +32,9 @@ spec:
             - containerPort: 3000
               name: http
               protocol: TCP
+            - hostPort: 3000
+              name: http
+              protocol: TCP
           resources:
             limits:
               cpu: 150m
