--- a/.github/workflows/EKS.yml
+++ b/.github/workflows/EKS.yml
@@ -36,7 +36,7 @@ jobs:
 
     - run: aws sts get-caller-identity 
 
-    - run: aws eks update-kubeconfig --region us-east-2 --name homolog2
+    - run: aws eks update-kubeconfig --region us-east-2 --name eks-app-go
     
     - run: ls
     
