--- a/deployment.yaml
+++ b/deployment.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/instance: thayse-go
     app.kubernetes.io/name: thayse-go
     version: default
+    name: go
 spec:
   replicas: 1
   revisionHistoryLimit: 2
