--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,33 +8,47 @@ on:
 
 jobs:
 
-  build:
-
-    runs-on: ubuntu-latest
+    test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        go_version: ['1.18', '1.17', '>=1.18']
+        os: ['ubuntu-latest', 'ubuntu-18.04']
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run:
-       go mod download github.com/gorilla/mux && go build -v main.go
-      
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.0
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
       with:
+        go-version: ${{ matrix.go_version }}
+      
+
+    - name: Test
+      run: go test -v main_test.go 
+      
+    build:
+
+     runs-on: ubuntu-latest
+     steps:
+     - uses: actions/checkout@v3
+     - name: Build
+       run:
+        go mod download github.com/gorilla/mux && go build -v main.go
+      
+     - name: Upload a Build Artifact
+       uses: actions/upload-artifact@v3.1.0
+       with:
     # Artifact name
         name: programa
     # A file, directory or wildcard pattern that describes what to upload
         path: main
-
-
-  docker:
-    needs: build
-    uses: ./.github/workflows/Docker.yml
-    secrets: inherit
-    
-
-  Deploy_EKS:
-     needs: docker
-     uses: ./.github/workflows/EKS.yml
+docker:
+     needs: build
+     uses: ./.github/workflows/Docker.yml
      secrets: inherit
-     
 
+    
+      Deploy_ECS:
+       needs: docker
+       uses: ./.github/workflows/ECS.yml
+       secrets: inherit
