--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-    test:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -26,7 +26,7 @@ jobs:
     - name: Test
       run: go test -v main_test.go 
       
-    build:
+  build:
 
      runs-on: ubuntu-latest
      steps:
@@ -42,13 +42,15 @@ jobs:
         name: programa
     # A file, directory or wildcard pattern that describes what to upload
         path: main
-docker:
+        
+     docker:
      needs: build
      uses: ./.github/workflows/Docker.yml
      secrets: inherit
 
     
-      Deploy_ECS:
-       needs: docker
-       uses: ./.github/workflows/ECS.yml
-       secrets: inherit
+
+      Deploy_EKS:
+      needs: docker
+      uses: ./.github/workflows/EKS.yml
+      secrets: inherit
