--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,48 +7,42 @@ on:
     branches: [ '*' ]
 
 jobs:
+    
+    test:
 
-  test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        go_version: ['1.18', '1.17', '>=1.18']
-        os: ['ubuntu-latest', 'ubuntu-18.04']
+    - name: Go Test Action
+  # You may pin to the exact commit or the version.
+  # uses: robherley/go-test-action@d2be031ae805ef1cfd282b685ff38f8b65e799b8
+    uses: robherley/go-test-action@v0.1.0
+
+
+
+    build:
+    needs: test
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - name: Build
+      run:
+       go mod download github.com/gorilla/mux && go build -v main.go
+      
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
       with:
-        go-version: ${{ matrix.go_version }}
-      
-
-    - name: Test
-      run: go test -v main_test.go 
-      
-  build:
-
-     runs-on: ubuntu-latest
-     steps:
-     - uses: actions/checkout@v3
-     - name: Build
-       run:
-        go mod download github.com/gorilla/mux && go build -v main.go
-      
-     - name: Upload a Build Artifact
-       uses: actions/upload-artifact@v3.1.0
-       with:
     # Artifact name
         name: programa
     # A file, directory or wildcard pattern that describes what to upload
         path: main
-        
-     docker:
-     needs: build
-     uses: ./.github/workflows/Docker.yml
-     secrets: inherit
 
-      Deploy_EKS:
-      needs: docker
-      uses: ./.github/workflows/EKS.yml
-      secrets: inherit
+
+  docker:
+    needs: build
+    uses: ./.github/workflows/Docker.yml
+    secrets: inherit
+    
+
+  Deploy_EKS:
+     needs: docker
+     uses: ./.github/workflows/EKS.yml
+     secrets: inherit
+     
