--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,24 +7,15 @@ on:
     branches: [ '*' ]
 
 jobs:
-    
-    test:
 
-    - name: Go Test Action
-  # You may pin to the exact commit or the version.
-  # uses: robherley/go-test-action@d2be031ae805ef1cfd282b685ff38f8b65e799b8
-    uses: robherley/go-test-action@v0.1.0
+  build:
 
-
-
-    build:
-    needs: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build
       run:
-       go mod download github.com/gorilla/mux && go build -v main.go
+         go mod init && go get -u github.com/gorilla/mux && go build -v main.go
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
