--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run:
-       go get -u github.com/gorilla/mux && go build -v main.go
+       go mod download github.com/gorilla/mux && go build -v main.go
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
